S302T500-434 #time 39m Updated InventoryController to remove all usages of JSONObject ?implement